[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/RandomLevelGenTileset.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Room Scripts/battle scripts/enemy_spawn_timer.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Room Scripts/battle scripts/endless_room.gd" type="Script" id=4]
[ext_resource path="res://Sprites/messy_floor.png" type="Texture" id=5]

[sub_resource type="Environment" id=4]
background_mode = 4
fog_color = Color( 0, 0.490196, 0.976471, 1 )
fog_sun_amount = 0.38
tonemap_mode = 4
glow_enabled = true

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=8]
0/name = "RandomLevelGenTileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "RandomLevelGenTileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 32, 32 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 7 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="world" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -352.0 ],
"_edit_vertical_guides_": [ -3328.0 ]
}

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.678431, 0.666667, 0.670588, 1 )
position = Vector2( 6687, 3296 )
scale = Vector2( 26.896, 26.768 )
texture = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="enemy_spawn_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="swarm_timer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[node name="out_of_bounds" type="Area2D" parent="."]
position = Vector2( -1185, -1024 )
scale = Vector2( 1.1, 1.1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="out_of_bounds"]
position = Vector2( 10.5, 4000 )
scale = Vector2( 1, 350 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="out_of_bounds"]
position = Vector2( 13500, 4000 )
scale = Vector2( 1, 350 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="out_of_bounds"]
position = Vector2( 6750, 500 )
scale = Vector2( 675, 1 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="out_of_bounds"]
position = Vector2( 6750, 7250 )
scale = Vector2( 675, 1 )
shape = SubResource( 5 )

[node name="out_of_bounds_wall" type="TileMap" parent="."]
scale = Vector2( 3, 2.5 )
tile_set = SubResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, -65463, 0, 0, -65462, 0, 0, -65461, 0, 0, -65460, 0, 0, -65459, 0, 0, -65458, 0, 0, -65457, 0, 0, -65456, 0, 0, -65455, 0, 0, -65454, 0, 0, -65453, 0, 0, -65452, 0, 0, -65451, 0, 0, -65450, 0, 0, -65449, 0, 0, -65448, 0, 0, -65447, 0, 0, -65446, 0, 0, -65445, 0, 0, -65444, 0, 0, -65443, 0, 0, -65442, 0, 0, -65441, 0, 0, -65440, 0, 0, -65439, 0, 0, -65438, 0, 0, -65437, 0, 0, -65436, 0, 0, -65435, 0, 0, -65434, 0, 0, -65433, 0, 0, -65432, 0, 0, -65431, 0, 0, -65430, 0, 0, -65429, 0, 0, -65428, 0, 0, -65427, 0, 0, -65426, 0, 0, -65425, 0, 0, -65424, 0, 0, -65423, 0, 0, -65422, 0, 0, -65421, 0, 0, -65420, 0, 0, -65419, 0, 0, -65418, 0, 0, -65417, 0, 0, -65416, 0, 0, -65415, 0, 0, -65414, 0, 0, -65413, 0, 0, -65412, 0, 0, -65411, 0, 0, -65410, 0, 0, -65409, 0, 0, -65408, 0, 0, -65407, 0, 0, 65535, 0, 0, 129, 0, 0, 131071, 0, 0, 65665, 0, 0, 196607, 0, 0, 131201, 0, 0, 262143, 0, 0, 196737, 0, 0, 327679, 0, 0, 262273, 0, 0, 393215, 0, 0, 327809, 0, 0, 458751, 0, 0, 393345, 0, 0, 524287, 0, 0, 458881, 0, 0, 589823, 0, 0, 524417, 0, 0, 655359, 0, 0, 589953, 0, 0, 720895, 0, 0, 655489, 0, 0, 786431, 0, 0, 721025, 0, 0, 851967, 0, 0, 786561, 0, 0, 917503, 0, 0, 852097, 0, 0, 983039, 0, 0, 917633, 0, 0, 1048575, 0, 0, 983169, 0, 0, 1114111, 0, 0, 1048705, 0, 0, 1179647, 0, 0, 1114241, 0, 0, 1245183, 0, 0, 1179777, 0, 0, 1310719, 0, 0, 1245313, 0, 0, 1376255, 0, 0, 1310849, 0, 0, 1441791, 0, 0, 1376385, 0, 0, 1507327, 0, 0, 1441921, 0, 0, 1572863, 0, 0, 1507457, 0, 0, 1638399, 0, 0, 1572993, 0, 0, 1703935, 0, 0, 1638529, 0, 0, 1769471, 0, 0, 1704065, 0, 0, 1835007, 0, 0, 1769601, 0, 0, 1900543, 0, 0, 1835137, 0, 0, 1966079, 0, 0, 1900673, 0, 0, 2031615, 0, 0, 1966209, 0, 0, 2097151, 0, 0, 2031745, 0, 0, 2162687, 0, 0, 2097281, 0, 0, 2228223, 0, 0, 2162817, 0, 0, 2293759, 0, 0, 2228353, 0, 0, 2359295, 0, 0, 2293889, 0, 0, 2424831, 0, 0, 2359425, 0, 0, 2490367, 0, 0, 2424961, 0, 0, 2555903, 0, 0, 2490497, 0, 0, 2621439, 0, 0, 2556033, 0, 0, 2686975, 0, 0, 2621569, 0, 0, 2752511, 0, 0, 2687105, 0, 0, 2818047, 0, 0, 2752641, 0, 0, 2883583, 0, 0, 2818177, 0, 0, 2949119, 0, 0, 2883713, 0, 0, 3014655, 0, 0, 2949249, 0, 0, 3080191, 0, 0, 3014785, 0, 0, 3145727, 0, 0, 3080321, 0, 0, 3211263, 0, 0, 3145857, 0, 0, 3276799, 0, 0, 3211393, 0, 0, 3342335, 0, 0, 3276929, 0, 0, 3407871, 0, 0, 3342465, 0, 0, 3473407, 0, 0, 3408001, 0, 0, 3538943, 0, 0, 3473537, 0, 0, 3604479, 0, 0, 3539073, 0, 0, 3670015, 0, 0, 3604609, 0, 0, 3735551, 0, 0, 3670145, 0, 0, 3801087, 0, 0, 3735681, 0, 0, 3866623, 0, 0, 3801217, 0, 0, 3932159, 0, 0, 3866753, 0, 0, 3997695, 0, 0, 3932289, 0, 0, 4063231, 0, 0, 3997825, 0, 0, 4128767, 0, 0, 4063361, 0, 0, 4194303, 0, 0, 4128897, 0, 0, 4259839, 0, 0, 4194433, 0, 0, 4325375, 0, 0, 4259969, 0, 0, 4390911, 0, 0, 4325505, 0, 0, 4456447, 0, 0, 4391041, 0, 0, 4521983, 0, 0, 4456577, 0, 0, 4587519, 0, 0, 4522113, 0, 0, 4653055, 0, 0, 4587649, 0, 0, 4718591, 0, 0, 4653185, 0, 0, 4784127, 0, 0, 4718721, 0, 0, 4849663, 0, 0, 4784257, 0, 0, 4915199, 0, 0, 4849793, 0, 0, 4980735, 0, 0, 4915329, 0, 0, 5046271, 0, 0, 4980865, 0, 0, 5111807, 0, 0, 5046401, 0, 0, 5177343, 0, 0, 5111937, 0, 0, 5242879, 0, 0, 5177473, 0, 0, 5308415, 0, 0, 5243009, 0, 0, 5373951, 0, 0, 5308545, 0, 0, 5439487, 0, 0, 5373952, 0, 0, 5373953, 0, 0, 5373954, 0, 0, 5373955, 0, 0, 5373956, 0, 0, 5373957, 0, 0, 5373958, 0, 0, 5373959, 0, 0, 5373960, 0, 0, 5373961, 0, 0, 5373962, 0, 0, 5373963, 0, 0, 5373964, 0, 0, 5373965, 0, 0, 5373966, 0, 0, 5373967, 0, 0, 5373968, 0, 0, 5373969, 0, 0, 5373970, 0, 0, 5373971, 0, 0, 5373972, 0, 0, 5373973, 0, 0, 5373974, 0, 0, 5373975, 0, 0, 5373976, 0, 0, 5373977, 0, 0, 5373978, 0, 0, 5373979, 0, 0, 5373980, 0, 0, 5373981, 0, 0, 5373982, 0, 0, 5373983, 0, 0, 5373984, 0, 0, 5373985, 0, 0, 5373986, 0, 0, 5373987, 0, 0, 5373988, 0, 0, 5373989, 0, 0, 5373990, 0, 0, 5373991, 0, 0, 5373992, 0, 0, 5373993, 0, 0, 5373994, 0, 0, 5373995, 0, 0, 5373996, 0, 0, 5373997, 0, 0, 5373998, 0, 0, 5373999, 0, 0, 5374000, 0, 0, 5374001, 0, 0, 5374002, 0, 0, 5374003, 0, 0, 5374004, 0, 0, 5374005, 0, 0, 5374006, 0, 0, 5374007, 0, 0, 5374008, 0, 0, 5374009, 0, 0, 5374010, 0, 0, 5374011, 0, 0, 5374012, 0, 0, 5374013, 0, 0, 5374014, 0, 0, 5374015, 0, 0, 5374016, 0, 0, 5374017, 0, 0, 5374018, 0, 0, 5374019, 0, 0, 5374020, 0, 0, 5374021, 0, 0, 5374022, 0, 0, 5374023, 0, 0, 5374024, 0, 0, 5374025, 0, 0, 5374026, 0, 0, 5374027, 0, 0, 5374028, 0, 0, 5374029, 0, 0, 5374030, 0, 0, 5374031, 0, 0, 5374032, 0, 0, 5374033, 0, 0, 5374034, 0, 0, 5374035, 0, 0, 5374036, 0, 0, 5374037, 0, 0, 5374038, 0, 0, 5374039, 0, 0, 5374040, 0, 0, 5374041, 0, 0, 5374042, 0, 0, 5374043, 0, 0, 5374044, 0, 0, 5374045, 0, 0, 5374046, 0, 0, 5374047, 0, 0, 5374048, 0, 0, 5374049, 0, 0, 5374050, 0, 0, 5374051, 0, 0, 5374052, 0, 0, 5374053, 0, 0, 5374054, 0, 0, 5374055, 0, 0, 5374056, 0, 0, 5374057, 0, 0, 5374058, 0, 0, 5374059, 0, 0, 5374060, 0, 0, 5374061, 0, 0, 5374062, 0, 0, 5374063, 0, 0, 5374064, 0, 0, 5374065, 0, 0, 5374066, 0, 0, 5374067, 0, 0, 5374068, 0, 0, 5374069, 0, 0, 5374070, 0, 0, 5374071, 0, 0, 5374072, 0, 0, 5374073, 0, 0, 5374074, 0, 0, 5374075, 0, 0, 5374076, 0, 0, 5374077, 0, 0, 5374078, 0, 0, 5374079, 0, 0, 5374080, 0, 0, 5374081, 0, 0 )

[connection signal="tree_exiting" from="." to="." method="_on_world_tree_exiting"]
[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="swarm_timer" to="." method="_on_swarm_timer_timeout"]
